reduce link size to prevent overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-size: 18px;
 }
+a{
+  overflow: hidden !important;
+}
 #intro-canvas{
   height: 100%;
   background: linear-gradient(
@@ -83,7 +86,6 @@ a, .brood {
   margin: 0 auto;
 }
 .whoei a {
-  font-size: 1.3em;
   font-weight: bold;
   color: rgba(250,30,180, 0.9) !important;
   text-shadow: 1px 1px rgba(250,250,0, 0.9) !important;
